# bartenders-of-corfu

./: .env_example  .gitignore  Dockerfile  Game Rules.md  README.md  api.py  claude.md  docker-compose.yml  game.py  k-apply.sh  k3s-registries.yaml  log_conf.yaml  plan.md  pyproject.toml  requirements.txt  run-local.sh  run-tests.sh  run-ui-tests.sh  server.py
.claude/: pre-session.sh  run-all-tests.sh  run-relevant-tests.sh  settings.json
app/: GameState.py  Ingredient.py  JWTHandler.py  PlayerState.py  UserManager.py  actions.py  api.py  bot_player.py  card.py  cocktails.py  db.py  game.py  gameManager.py  game_modes.py  logging_config.py  push.py  user.py  utils.py
k3s/: bartenders.yml  nginx.yml  nodeport.yml
ml/: README.md  __init__.py  __main__.py  cocktail.py  env.py  evaluate.py  evaluator.py  fit_evaluator.py  gauntlet.py  lookahead.py  mcts.py  selfplay.py  train_from_history.py  train_selfplay.py  versions.py
playtesting/: __init__.py  __main__.py  display.py  runner.py  strategy.py  tournament.py  valid_actions.py
scripts/: generate_vapid_keys.py
specs/: cards.allium  game-manager.allium  game.allium  ui-frontend.allium  user-management.allium
static/: admin.css  admin.html  admin.js  constants.js  dom.js  drinks.js  game.html  game.js  gameElements.js  index.html  ingredients.js  login.html  manifest.json  play.html  profile.html  script.js  state.js  styles.css  sw.js  theme.js
supabase/: config.toml
terraform/: main.tf  terraform.tfstate.1775899897.backup  terraform.tfstate.1775899922.backup  terraform.tfstate.1775933971.backup
(+69 files in other folders)
