[project]
name = "bartenders-of-corfu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==5.0.0",
    "cryptography==46.0.3",
    "fastapi==0.128.0",
    "pyjwt==2.10.1",
    "pyyaml==6.0.3",
    "supabase==2.27.0",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
