[project]
name = "bartenders-of-corfu"
version = "0.1.0"
description = "Python implementation of the board game classic: Bartenders of Corfu"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==5.0.0",
    "cryptography==46.0.5",
    "fastapi==0.129.2",
    "pyjwt==2.11.0",
    "pyyaml==6.0.3",
    "supabase==2.28.0",
    "uvicorn==0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
